--- a/docs/设计模式/单例模式.md
+++ b/docs/设计模式/单例模式.md
@@ -123,7 +123,7 @@ public class Singleton {
                 }
             }
         }
-        return INSTANCE;
+        return singleton;
     }
 }
 ```
